# abdi

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
bias_audit_tool/: app.py
bias_audit_tool/data/: data_loader.py
bias_audit_tool/modeling/: fairness.py  interpretation.py  model_selector.py
bias_audit_tool/preprocessing/: exploration.ipynb  preprocess.py  recommend_columns.py  summary.py  transform.py
bias_audit_tool/report/: report_generator.py
bias_audit_tool/sample_data/: CMI-ASC.xlsx  CPTAC-2.xlsx  TCGA-BRCA.xlsx  TCGA-DLBC.xlsx  exploration.ipynb
bias_audit_tool/stats/: stats_analysis.py
bias_audit_tool/utils/: fairness.py  interpretation.py  model_selector.py  preprocess.py  stats_analysis.py  summary.py  transform.py  ui_helpers.py
bias_audit_tool/visualization/: ui_blocks.py  visualization.py
tests/: test_preprocess.py  test_recommend_columns.py
