[project]
name = "abdi"
version = "0.1.0"
description = "Bias auditing and fairness analysis tool for clinical datasets"
authors = [
    { name = "Nabin Kim", email = "nabinkim0318@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "statsmodels>=0.14.0",
    "fairlearn>=0.10.0",
    "shap>=0.44.0",
    "jinja2>=3.1.0",
    "reportlab>=4.0.0",
    "tabulate>=0.9.0"
]
packages = [{ include = "bias_audit_tool" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.4.1"
pre-commit = "^3.7.0"
ipykernel = "^6.29.0"
pytest = "^8.4.1"
